[package]
name = "bevy_doryen"
version = "0.1.0"
authors = ["Tomasz Sterna <tomek@sterna.link>"]
edition = "2018"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
    "bevy_winit",
    "x11"
] }
doryen-rs = { version = "*", path = "../doryen-rs" }
uni-gl = "0.1"
glutin = "0.25"
winit = { version = "0.23.0", default-features = false }
anyhow = "1.0"
log = "0.4"
